test responsiveness of pricing

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+    <div class="row">
 
+      <div class="col-lg-4 col-md-6">
       <div class="card">
         <div class="card-header">
           <h3>Chihuahua</h3>
@@ -175,6 +177,9 @@
         </div>
       </div>
 
+      </div>
+
+      <div class="col-lg-4 col-md-6">
       <div class="card">
         <div class="card-header">
           <h3>Labrador</h3>
@@ -189,8 +194,9 @@
         </div>
       </div>
 
+</div>
 
-
+<div class="col-lg-4">
       <div class="card">
         <div class="card-header">
           <h3>Mastiff</h3>
@@ -205,7 +211,8 @@
           <button type="button">Sign Up</button>
         </div>
       </div>
-
+      </div>
+</div>
     
 
 
