--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <div class="row">
 
-      <div class="col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4 col-md-6">
       <div class="card">
         <div class="card-header">
           <h3>Chihuahua</h3>
@@ -173,13 +173,15 @@
           <p>5 Matches Per Day</p>
           <p>10 Messages Per Day</p>
           <p>Unlimited App Usage</p>
-          <button type="button">Sign Up</button>
+          
+          <button type="button" class="btn btn-outline-dark col-12">Sign Up</button>
+        
         </div>
       </div>
 
       </div>
 
-      <div class="col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4 col-md-6">
       <div class="card">
         <div class="card-header">
           <h3>Labrador</h3>
@@ -190,13 +192,13 @@
           <p>Unlimited Matches</p>
           <p>Unlimited Messages</p>
           <p>Unlimited App Usage</p>
-          <button type="button">Sign Up</button>
+          <button type="button" class="btn btn-dark col-12">Sign Up</button>
         </div>
       </div>
 
 </div>
 
-<div class="col-lg-4">
+<div class="pricing-column col-lg-4">
       <div class="card">
         <div class="card-header">
           <h3>Mastiff</h3>
@@ -208,7 +210,7 @@
           <p>Unlimited Matches</p>
           <p>Unlimited Messages</p>
           <p>Unlimited App Usage</p>
-          <button type="button">Sign Up</button>
+          <button type="button" class="btn btn-dark col-12">Sign Up</button>
         </div>
       </div>
       </div>
