--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <div class="row">
 
-      <div class="pricing-column col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4">
       <div class="card">
         <div class="card-header">
           <h3>Chihuahua</h3>
@@ -181,7 +181,7 @@
 
       </div>
 
-      <div class="pricing-column col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4">
       <div class="card">
         <div class="card-header">
           <h3>Labrador</h3>
