7. Bootstrap Challenge 2 Solution

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Pricing</a>
+              <a class="nav-link active" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Download</a>
+              <a class="nav-link active" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -227,9 +227,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="download-button btn btn-lg btn-dark"><i class="bi bi-apple"></i>Download</button>
+    <button type="button" class="download-button btn btn-lg btn-outline-light"><i class="bi bi-google-play"></i>Download</button>
 
   </section>
 
@@ -237,8 +237,11 @@
   <!-- Footer -->
 
   <footer id="footer">
-
-    <p>© Copyright TinDog</p>
+    <i class="social-icon mx-2 bi bi-facebook"></i>
+    <i class="social-icon mx-2 bi bi-twitter"></i>
+    <i class="social-icon mx-2 bi bi-instagram"></i>
+    <i class="social-icon mx-2 bi bi-envelope-fill"></i>
+    <p class="my-3">© Copyright TinDog</p>
 
   </footer>
 
