7. Intermediate Bootstrap Done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
 
-  <section id="title">
+  <section id="title" class="colored-section">
 
     <div class="container-fluid my-container-fluid">
       <!-- Nav Bar -->
@@ -81,7 +81,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section id="features" class="white-section">
 
     <div class="container-fluid">
 
@@ -111,7 +111,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section id="testimonials" class="colored-section">
 
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="false" data-bs-keyboard="true">
       <div class="carousel-inner">
@@ -147,7 +147,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section id="press" class="colored-section">
     <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -158,7 +158,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="white-section">
 
     <h2 class="setcion-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -228,7 +228,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section id="cta" class="colored-section">
 
     <div class="container-fluid">
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
@@ -242,7 +242,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer id="footer" class="white-section">
     <div class="container-fluid">
 
       <i class="social-icon mx-2 bi bi-facebook"></i>
